First Cut at SIMD implementations for various operations.